--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/_Main/Maps/DevTestMap.DevTestMap
+EditorStartupMap=/Game/_Main/Maps/DevTestMap.DevTestMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
